--- a/index.html
+++ b/index.html
@@ -1,122 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>project1</title>
-  </head>
 
-  <body>
-    <nav>
-      <ul>
-        <li class="logo-text">Prograd</li>
-      </ul>
-      <ul>
-        <li><a href="#home" class="nav-link">Home</a></li>
-        <li><a href="#bio" class="nav-link">Bio</a></li>
-        <li><a href="#portfolio" class="nav-link">Portfolio</a></li>
-        <li><a href="#skills" class="nav-link">Skills</a></li>
-        <li><a href="#contact" class="nav-link link-button">Contact</a></li>
-      </ul>
-    </nav>
-    <header id="home">
-      <div>
-        <p>I BELIEVE IN</p>
-        <h1>EAT(); SLEEP(); CODE(); REPEAT();</h1>
-      </div>
-    </header>
-    <section id="bio">
-      <img src="profile picture" alt="photo" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>project1</title>
+</head>
+
+<body>
+  <nav>
+    <ul>
+      <li class="logo-text">Prograd</li>
+    </ul>
+    <ul>
+      <li><a href="#home" class="nav-link">Home</a></li>
+      <li><a href="#bio" class="nav-link">Bio</a></li>
+      <li><a href="#portfolio" class="nav-link">Portfolio</a></li>
+      <li><a href="#skills" class="nav-link">Skills</a></li>
+      <li><a href="#contact" class="nav-link link-button">Contact</a></li>
+    </ul>
+  </nav>
+  <header id="home">
+    <div>
+      <p>I BELIEVE IN</p>
+      <h1>EAT(); SLEEP(); CODE(); REPEAT();</h1>
+    </div>
+  </header>
+  <section id="bio">
+    <img src="photos/profile-pic.jpeg" alt="photo" />
+    <article>
+      <h2>Shivam Tiwari</h2>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus
+        quibusdam molestiae similique facere maxime officia, dicta et, sed
+        voluptatem corporis natusella perspiciatis quos sibu
+      </p>
+      <a class="link-button" href="#">Download My Resume</a>
+    </article>
+  </section>
+  <section id="portfolio">
+    <h3>Portfolio</h3>
+    <p>Some of my best project so for</p>
+    <hr />
+    <div>
       <article>
-        <h2>Shivam Tiwari</h2>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus
-          quibusdam molestiae similique facere maxime officia, dicta et, sed
-          voluptatem corporis natusella perspiciatis quos sibu
-        </p>
-        <a class="link-button" href="#">Download My Resume</a>
+        <img src="photos/Coding-icon.svg" alt="img" />
+        <h3>Personal blog</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
       </article>
-    </section>
-    <section id="portfolio">
-      <h3>Portfolio</h3>
-      <p>Some of my best project so for</p>
-      <hr />
+      <article>
+        <img src="photos/Coding-icon.svg" alt="img" />
+        <h3>Tic Toc Toe</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis.
+        </p>
+      </article>
+      <article>
+        <img src="photos/Coding-icon.svg" alt="img" />
+        <h3>Time Tablklke generator</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolortur?
+        </p>
+      </article>
+    </div>
+  </section>
+  <section id="skills">
+    <h4>Skills</h4>
+    <div>
+      <h4>TECHNICAL SKILLS</h4>
       <div>
-        <article>
-          <img src="" alt="" />
-          <h3>Personal blog</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h3>Tic Toc Toe</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis.
-          </p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h3>Time Tablklke generator</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolortur?
-          </p>
-        </article>
+        <ul>
+          <li>HTML</li>
+          <li>
+            <progress max="100" value="80"></progress>
+          </li>
+          <li>CSS</li>
+          <li>
+            <progress max="100" value="70"></progress>
+          </li>
+          <li>JAVASCRIPT</li>
+          <li>
+            <progress max="100" value="50"></progress>
+          </li>
+          <li>C PROGRAMMING</li>
+          <li>
+            <progress max="100" value="90"></progress>
+          </li>
+          <li>C++ PROGRAMMING</li>
+          <li>
+            <progress max="100" value="70"></progress>
+          </li>
+        </ul>
       </div>
-    </section>
-    <section id="skills">
-      <h4>Skills</h4>
+    </div>
+    <div>
+      <h4>LANGUAGES</h4>
       <div>
-        <h4>TECHNICAL SKILLS</h4>
-        <div>
-          <ul>
-            <li>HTML</li>
-            <li>
-              <progress max="100" value="80"></progress>
-            </li>
-            <li>CSS</li>
-            <li>
-              <progress max="100" value="70"></progress>
-            </li>
-            <li>JAVASCRIPT</li>
-            <li>
-              <progress max="100" value="50"></progress>
-            </li>
-            <li>C PROGRAMMING</li>
-            <li>
-              <progress max="100" value="90"></progress>
-            </li>
-            <li>C++ PROGRAMMING</li>
-            <li>
-              <progress max="100" value="70"></progress>
-            </li>
-          </ul>
-        </div>
+        <ul>
+          <li>HINDI</li>
+          <li>
+            <progress max="100" value="90"></progress>
+          </li>
+          <li>ENGLISH</li>
+          <li>
+            <progress max="100" value="75"></progress>
+          </li>
+        </ul>
       </div>
-      <div>
-        <h4>LANGUAGES</h4>
-        <div>
-          <ul>
-            <li>HINDI</li>
-            <li>
-              <progress max="100" value="90"></progress>
-            </li>
-            <li>ENGLISH</li>
-            <li>
-              <progress max="100" value="75"></progress>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </section>
-    <footer id="contact">
-      <h3>Contact</h3>
-      <form action="">
-        <input type="text" placeholder="ENTER YOUR NAME" />
-        <input type="email" placeholder="ENTER YOUR E-MAIL" />
-        <input type="text" placeholder="ENTER YOUR MASSAGE" />
-        <input class="link-button" type="submit" value="Send Massage" />
-      </form>
-    </footer>
-  </body>
+    </div>
+  </section>
+  <footer id="contact">
+    <h3>Contact</h3>
+    <form action="">
+      <input type="text" placeholder="ENTER YOUR NAME" />
+      <input type="email" placeholder="ENTER YOUR E-MAIL" />
+      <input type="text" placeholder="ENTER YOUR MASSAGE" />
+      <input class="link-button" type="submit" value="Send Massage" />
+    </form>
+  </footer>
+</body>
+
 </html>
