--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
       <h2>Shivam Tiwari</h2>
       <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus
+        <span class="break"></span>
         quibusdam molestiae similique facere maxime officia, dicta et, sed
         voluptatem corporis natusella perspiciatis quos sibu
+        <span class="break"></span>
       </p>
       <a class="link-button" href="#">Download My Resume</a>
     </article>
@@ -49,20 +51,20 @@
       <article>
         <img src="photos/Coding-icon.svg" alt="img" />
         <h3>Personal blog</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+        <p>Lorem ipsum dolor sit amet, icing.</p>
       </article>
       <article>
         <img src="photos/Coding-icon.svg" alt="img" />
         <h3>Tic Toc Toe</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis.
+          Lorem ipsum dolor sit amet, conselit. Nobis.
         </p>
       </article>
       <article>
         <img src="photos/Coding-icon.svg" alt="img" />
-        <h3>Time Tablklke generator</h3>
+        <h3>Time table</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolortur?
+          Lorem ipsum dolor sit amet fgfh Lorem ipsum dol cons Dolortur?
         </p>
       </article>
     </div>
