--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
     <article>
       <h2>Shivam Tiwari</h2>
       <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus
+        I am a student of Computer Science and Engineeing. I don't have any work experience but I strongly believe that
+        I am much more capable to learn new skills. I am sincere and focused hardworking. I have knowledge of HTML, CSS,
+        JAVASCRIPT, C, C++ and Data Structure. Rational thought process and goal-orient planning is my strengths.
         <span class="break"></span>
-        quibusdam molestiae similique facere maxime officia, dicta et, sed
-        voluptatem corporis natusella perspiciatis quos sibu
+        I am currently on the look out for a challenging role to build products that make a difference
         <span class="break"></span>
       </p>
       <a class="link-button" href="#">Download My Resume</a>
@@ -70,56 +71,58 @@
     </div>
   </section>
   <section id="skills">
-    <h4>Skills</h4>
-    <div>
-      <h4>TECHNICAL SKILLS</h4>
+    <h3>Skills</h3>
+    <div id="skill-container">
       <div>
-        <ul>
-          <li>HTML</li>
-          <li>
-            <progress max="100" value="80"></progress>
-          </li>
-          <li>CSS</li>
-          <li>
-            <progress max="100" value="70"></progress>
-          </li>
-          <li>JAVASCRIPT</li>
-          <li>
-            <progress max="100" value="50"></progress>
-          </li>
-          <li>C PROGRAMMING</li>
-          <li>
-            <progress max="100" value="90"></progress>
-          </li>
-          <li>C++ PROGRAMMING</li>
-          <li>
-            <progress max="100" value="70"></progress>
-          </li>
-        </ul>
+        <h4>TECHNICAL SKILLS</h4>
+        <div>
+          <ul>
+            <li>HTML</li>
+            <li>
+              <progress max="100" value="80"></progress>
+            </li>
+            <li>CSS</li>
+            <li>
+              <progress max="100" value="70"></progress>
+            </li>
+            <li>JAVASCRIPT</li>
+            <li>
+              <progress max="100" value="50"></progress>
+            </li>
+            <li>C PROGRAMMING</li>
+            <li>
+              <progress max="100" value="90"></progress>
+            </li>
+            <li>C++ PROGRAMMING</li>
+            <li>
+              <progress max="100" value="70"></progress>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-    <div>
-      <h4>LANGUAGES</h4>
       <div>
-        <ul>
-          <li>HINDI</li>
-          <li>
-            <progress max="100" value="90"></progress>
-          </li>
-          <li>ENGLISH</li>
-          <li>
-            <progress max="100" value="75"></progress>
-          </li>
-        </ul>
+        <h4>LANGUAGES</h4>
+        <div>
+          <ul>
+            <li>HINDI</li>
+            <li>
+              <progress max="100" value="90"></progress>
+            </li>
+            <li>ENGLISH</li>
+            <li>
+              <progress max="100" value="75"></progress>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </section>
   <footer id="contact">
     <h3>Contact</h3>
     <form action="">
-      <input type="text" placeholder="ENTER YOUR NAME" />
-      <input type="email" placeholder="ENTER YOUR E-MAIL" />
-      <input type="text" placeholder="ENTER YOUR MASSAGE" />
+      <input class="input" type="text" placeholder="ENTER YOUR NAME" />
+      <input class="input" type="email" placeholder="ENTER YOUR E-MAIL" />
+      <input class="input" type="text" placeholder="ENTER YOUR MASSAGE" />
       <input class="link-button" type="submit" value="Send Massage" />
     </form>
   </footer>
