--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <nav>
     <ul>
-      <li class="logo-text">Prograd</li>
+      <li class="logo-text">Prograd SHIVAM</li>
       <li>
         <ul>
           <li><a href="#home" class="nav-link">Home</a></li>
